--- a/.github/workflows/github-actions.demo.yml
+++ b/.github/workflows/github-actions.demo.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run tests
-      run: echo "Running tests..." # Replace with actual test commands
+      run: echo "Running tests.." # Replace with actual test commands
 
   wait_for_approval:
     runs-on: ubuntu-latest
