--- a/.github/workflows/github-actions.demo.yml
+++ b/.github/workflows/github-actions.demo.yml
@@ -1,30 +1,30 @@
 # .github/workflows/pr-approval.yml
-name: PR Approval
+# name: PR Approval
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+# on:
+#   pull_request:
+#     types: [opened, synchronize, reopened]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
 
-    - name: Run tests
-      run: echo "Running tests.." # Replace with actual test commands
+#     - name: Run tests
+#       run: echo "Running tests.." # Replace with actual test commands
 
-  wait_for_approval:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Approval needed
-      run: echo "Waiting for approval"
-    - name: Approve PR
-      if: github.event.inputs.approved == 'true'
-      run: echo "PR approved"
+#   wait_for_approval:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#     - name: Approval needed
+#       run: echo "Waiting for approval"
+#     - name: Approve PR
+#       if: github.event.inputs.approved == 'true'
+#       run: echo "PR approved"
 
 
 # name: Cats 😺
